<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DatosUsuario">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        <TextView
            android:id="@+id/txvSNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Snombre"
            android:textStyle="bold"
            android:textSize="@dimen/nombre_contacto"
            ></TextView>
        <EditText
            android:id="@+id/SedtNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text=""
            android:layout_below="@+id/txvSNombre"
            android:gravity="center"
            android:layout_marginLeft="@dimen/left"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >
        <TextView
            android:id="@+id/txvSEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Semail"
            android:textStyle="bold"
            android:textSize="@dimen/nombre_email"
            android:layout_below="@id/SedtNombre"
            ></TextView>
        <EditText
            android:id="@+id/edtSEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text=""
            android:layout_below="@+id/txvSEmail"
            android:gravity="center"
            android:layout_marginLeft="@dimen/left"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >
            <TextView
                android:id="@+id/txvSTelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Stelefono"
                android:textStyle="bold"
                android:textSize="@dimen/telefono"
                android:layout_below="@id/edtSEmail"
                ></TextView>
            <EditText
                android:id="@+id/edtSTelefono"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text=""
                android:layout_below="@+id/txvSTelefono"
                android:gravity="center"
                android:layout_marginLeft="@dimen/left"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >
                <TextView
                    android:id="@+id/txvSDescripcion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Sdescripcion"
                    android:textStyle="bold"
                    android:textSize="@dimen/descripcion"
                    android:layout_below="@id/edtTelefono"
                    ></TextView>
                <EditText
                    android:id="@+id/edtSDescripcion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text=""
                    android:layout_below="@+id/txvSDescripcion"
                    android:gravity="center"
                    android:layout_marginLeft="@dimen/left"
                    />

                <EditText
                    android:id="@+id/edtSFecha"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text=""
                    android:textStyle="italic"
                    android:layout_below="@+id/edtSDescripcion"
                    android:gravity="center"
                    android:layout_marginLeft="@dimen/left"
                    />
                <Button
                    android:id="@+id/btnEditar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/edtFecha"
                    android:textStyle="italic"
                    android:textSize="@dimen/siguiente"
                    android:text="@string/editar"
                    android:layout_marginLeft="@dimen/left"
                    android:onClick="Regresar"
                    />


            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


</LinearLayout>